syntax = "proto3";

package mir;

option go_package = "github.com/filecoin-project/mir/pkg/pb/mir";

import "google/protobuf/descriptor.proto";

extend google.protobuf.OneofOptions {
  bool event_type = 50000;
}
